OSL Node no longer updates its in and outputs #102406

Closed
opened 2022-11-10 18:17:12 +01:00 by Ray molenkamp · 6 comments
Member

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 522.06

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-10 12:01, hash: 55e86f94a0
Worked: commits before 52bd198153

Short description of error
When you assign a script to the OSL node, it doesn't update its inputs/outputs in the console the following messages are shown

Error: Cannot add socket to built-in node
RNA_float_set: NodeSocket.default_value not found.
Error: Cannot add socket to built-in node
RNA_float_set_array: NodeSocket.default_value not found.
Error: Cannot add socket to built-in node
RNA_float_set: NodeSocket.default_value not found.
Error: Cannot add socket to built-in node
RNA_float_set_array: NodeSocket.default_value not found.
Info: OSL shader compilation succeeded

Exact steps for others to reproduce the error
Load attached .blend file, click the reload button on the OSL node

osl_bug.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 522.06 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-10 12:01, hash: `55e86f94a0` Worked: commits before 52bd198153 **Short description of error** When you assign a script to the OSL node, it doesn't update its inputs/outputs in the console the following messages are shown ``` Error: Cannot add socket to built-in node RNA_float_set: NodeSocket.default_value not found. Error: Cannot add socket to built-in node RNA_float_set_array: NodeSocket.default_value not found. Error: Cannot add socket to built-in node RNA_float_set: NodeSocket.default_value not found. Error: Cannot add socket to built-in node RNA_float_set_array: NodeSocket.default_value not found. Info: OSL shader compilation succeeded ``` **Exact steps for others to reproduce the error** Load attached .blend file, click the reload button on the OSL node [osl_bug.blend](https://archive.blender.org/developer/F13885045/osl_bug.blend)
Author
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo

Added subscribers: @JacquesLucke, @mano-wii

Added subscribers: @JacquesLucke, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Cc @JacquesLucke

This issue was referenced by 84c66fe9db

This issue was referenced by 84c66fe9db932b82ebf445a63dfb629fb3c1b35c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-11-11 10:10:19 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102406
No description provided.