Fix T102406: OSL script node no longer updates its in and outputs

This special case was missing in rB52bd198153ede3c7131df.